--- a/angular/src/app/shared/abstract-listar/abstract-listar.component.html
+++ b/angular/src/app/shared/abstract-listar/abstract-listar.component.html
@@ -1,1 +1,25 @@
-<p>abstract-listar works!</p>
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+  <!-- Dynamic Columns -->
+  <ng-container *ngFor="let column of displayedColumns" [matColumnDef]="column">
+    <th mat-header-cell *matHeaderCellDef>{{ column }}</th>
+    <td mat-cell *matCellDef="let element">{{ element[column] }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="acao">
+    <th mat-header-cell *matHeaderCellDef> Ação </th>
+    <td mat-cell *matCellDef="let element">
+      <button mat-button>Editar</button>
+      <button mat-button (click)="excluir(element)">Excluir</button>
+    </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns.concat(['acao'])"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns.concat(['acao']);"></tr>
+</table>
+<mat-paginator
+  [pageSize]="pageSize"
+  [pageSizeOptions]="[5, 10, 25, 100]"
+  showFirstLastButtons
+  (page)="onPageChange($event)">
+</mat-paginator>
