--- a/angular/src/app/shared/abstract-listar/abstract-listar.component.html
+++ b/angular/src/app/shared/abstract-listar/abstract-listar.component.html
@@ -9,7 +9,7 @@
   <ng-container matColumnDef="acao">
     <th mat-header-cell *matHeaderCellDef> Ação </th>
     <td mat-cell *matCellDef="let element">
-      <button mat-button>Editar</button>
+      <button mat-button (click)="editar(element)">Editar</button>
       <button mat-button (click)="excluir(element)">Excluir</button>
     </td>
   </ng-container>
