--- a/angular/src/app/app.component.html
+++ b/angular/src/app/app.component.html
@@ -2,6 +2,10 @@
   <button mat-icon-button (click)="collapsed.set(!collapsed())">
     <mat-icon>menu</mat-icon>
   </button>
+  <span class="example-spacer"></span>
+  <img src="assets/logo.png" class="img-logo">
+  <span class="example-spacer"></span>
+  <mat-icon>person</mat-icon>
 </mat-toolbar>
 <mat-sidenav-container>
   <mat-sidenav opened mode="side" [style.width]="sidenavWidth()" >
