--- a/angular/src/app/sidnav/sidnav.component.html
+++ b/angular/src/app/sidnav/sidnav.component.html
@@ -1,5 +1,5 @@
 <div class="sidenav-header">
-  <img [width]="profilePicSize()" [height]="profilePicSize()" src="assets/artigos-pagos.png">
+  <img [width]="profilePicSize()" [height]="profilePicSize()" >
   <div class="header-text" [class.hide-header-text]="sidenavCollapsed()">
     <h2>LAPEGO</h2>
     <p>Davi Faria</p>
