--- a/angular/src/app/shared/abstract-listar/abstract-listar.component.html
+++ b/angular/src/app/shared/abstract-listar/abstract-listar.component.html
@@ -1,10 +1,9 @@
 <mat-card>
   <mat-card-content>
     <div style="align-items: end">
-      <table mat-table [dataSource]="dataSource" >
-
+      <table mat-table [dataSource]="dataSource">
         <ng-container *ngFor="let column of displayedColumns" [matColumnDef]="column">
-          <th mat-header-cell *matHeaderCellDef>{{ column }}</th>
+          <th mat-header-cell *matHeaderCellDef>{{ columnNamesMapping[column] }}</th>
           <td mat-cell *matCellDef="let element">{{ element[column] }}</td>
         </ng-container>
 
@@ -27,7 +26,7 @@
       </mat-paginator>
 
       <div style="display: flex; justify-content: end">
-        <button mat-raised-button style="background:#167362;color: white" class="button-incluir">INCLUIR+</button>
+        <button mat-raised-button style="background:#167362;color: white" class="button-incluir" (click)="incluir()">INCLUIR+</button>
       </div>
     </div>
   </mat-card-content>
