--- a/angular/src/app/sidnav/sidnav.component.html
+++ b/angular/src/app/sidnav/sidnav.component.html
@@ -1,23 +1,28 @@
-<div class="sidenav-header">
-  <img [width]="profilePicSize()" [height]="profilePicSize()" >
-  <div class="header-text" [class.hide-header-text]="sidenavCollapsed()">
-    <h2>LAPEGO</h2>
-    <p>Davi Faria</p>
-    <p>Erik Mota</p>
+<div class="sidenav-container"> <!-- Contêiner para o fundo -->
+  <mat-nav-list>
+    <a mat-list-item routerLink='/user' routerLinkActive="active-link">
+      <mat-icon>person</mat-icon>
+      <span>Usuários</span>
+    </a>
+
+    <a mat-list-item routerLink='/' routerLinkActive="active-link">
+      <mat-icon>format_list_bulleted</mat-icon>
+      <span>Itens</span>
+    </a>
+    <a mat-list-item routerLink='/' routerLinkActive="active-link">
+      <mat-icon>wallpaper</mat-icon>
+      <span>Postagens</span>
+    </a>
+  </mat-nav-list>
+  <div class="sidenav-header">
+    <div class="header-text" [class.hide-header-text]="sidenavCollapsed()">
+      <h2>LAPEGO</h2>
+      <p>Davi Faria</p>
+      <p>Erik Mota</p>
+      <p>Denis Ferreira</p>
+      <p>Lucas Apparecido</p>
+      <p>Marcos Souza</p>
+      <p>Luiz Felipe</p>
+    </div>
   </div>
 </div>
-<mat-nav-list>
-  <a mat-list-item routerLink='/dashboard' routerLinkActive="active-link" #rlaDashboard="routerLinkActive"  >
-    <mat-icon matListItemIcon>dashboard</mat-icon>
-    <span>--</span>
-  </a>
-
-  <a mat-list-item routerLink='/' routerLinkActive="active-link" #rlaDashboard="routerLinkActive">
-    <mat-icon matListItemIcon>view_list</mat-icon>
-    <span>--</span>
-  </a>
-  <a mat-list-item routerLink='/analytics' routerLinkActive="active-link" #rlaDashboard="routerLinkActive">
-    <mat-icon matListItemIcon>analytics</mat-icon>
-    <span>--</span>
-  </a>
-</mat-nav-list>
