crud itens de acervo

--- a/angular/src/app/sidnav/sidnav.component.html
+++ b/angular/src/app/sidnav/sidnav.component.html
@@ -5,7 +5,7 @@
       <span>Usuários</span>
     </a>
 
-    <a mat-list-item routerLink='/' routerLinkActive="active-link">
+    <a mat-list-item routerLink='/items' routerLinkActive="active-link">
       <mat-icon>format_list_bulleted</mat-icon>
       <span>Itens</span>
     </a>
@@ -16,7 +16,7 @@
   </mat-nav-list>
   <div class="sidenav-header">
     <div class="header-text" [class.hide-header-text]="sidenavCollapsed()">
-      <h2>LAPEGO</h2>
+      <h2>LAPEGEO</h2>
       <p>Davi Faria</p>
       <p>Erik Mota</p>
       <p>Denis Ferreira</p>
