--- a/angular/src/app/security/authentication/authentication.component.html
+++ b/angular/src/app/security/authentication/authentication.component.html
@@ -1,26 +1,25 @@
 <div class="container">
   <mat-card>
+    <mat-card-header>
+      <div class="header-content">
+        <mat-icon class="icon_size">account_circle</mat-icon>
+        <mat-card-title>Login</mat-card-title>
+      </div>
+    </mat-card-header>
     <mat-card-content>
-      <form
-        [formGroup]="formGroup"
-        (ngSubmit)="onSubmit()"
-        class="form"
-      >
+      <form [formGroup]="formGroup" (ngSubmit)="onSubmit()" class="form">
         <div class="login-content">
-          <mat-form-field >
-            <mat-label >Usuário</mat-label>
-            <input matInput formControlName="login" autocomplete="off"
-                   placeholder="Usuário" maxlength="20">
-
-          </mat-form-field>
-          <mat-form-field >
-            <mat-label >Senha</mat-label>
-            <input matInput formControlName="senha" type="password" title="Senha"
-                   placeholder="Senha" >
-
+          <mat-form-field appearance="outline" class="full-width">
+            <mat-label>Usuário</mat-label>
+            <input matInput formControlName="login" autocomplete="off" placeholder="Usuário" maxlength="20">
           </mat-form-field>
 
-          <button mat-raised-button color="primary" type="submit"  title="Entrar">
+          <mat-form-field appearance="outline" class="full-width">
+            <mat-label>Senha</mat-label>
+            <input matInput formControlName="senha" type="password" placeholder="Senha">
+          </mat-form-field>
+
+          <button mat-raised-button color="primary" type="submit" title="Entrar" class="full-width">
             <span>Entrar</span>
           </button>
         </div>
