--- a/angular/src/app/security/authentication/authentication.component.scss
+++ b/angular/src/app/security/authentication/authentication.component.scss
@@ -1,31 +1,64 @@
+body {
+  margin: 0;
+  padding: 0;
+  background-color: #167362;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .container {
   width: 100%;
-  padding-right: 15px;
-  padding-left: 15px;
-  padding-top: 15%;
-  margin-right: auto;
-  margin-left: auto;
+  padding: 0 15px;
+  margin: 0 auto;
   display: flex;
-  flex-direction: row;
-  place-content: center;
+  justify-content: center;
   align-items: center;
+  min-height: 100vh;
+  background-color: #8abf92;
 }
 
 mat-card {
-  width: 300px;
-  display: flex;
+  width: 400px;
+  padding: 20px;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
 }
 
-.login-content {
-  padding-top: 30px;
+.header-content {
   display: flex;
   flex-direction: column;
-  place-content: center;
   align-items: center;
+  padding-bottom: 20px;
 }
 
 .icon_size {
-  font-size: 4em;
-  margin-bottom: 40px;
-  margin-left: -1em;
+  font-size: 5em;
+  background-color: #0545ef;
+}
+
+mat-card-title {
+  font-size: 1.5rem;
+  margin-top: 10px;
+  text-align: center;
+}
+
+.login-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+mat-form-field.full-width {
+  width: 100%;
+}
+
+button.full-width {
+  width: 100%;
+  margin-top: 20px;
+}
+
+button {
+  height: 50px;
+  font-size: 1.1rem;
 }
