--- a/angular/src/app/app.component.html
+++ b/angular/src/app/app.component.html
@@ -18,6 +18,6 @@
   </mat-sidenav-container>
 </div>
 
-<div *ngIf="!showLayout()">
+<div *ngIf="!showLayout()" style="  overflow: hidden;">
   <router-outlet></router-outlet>
 </div>
