--- a/angular/src/app/security/authentication/authentication.component.html
+++ b/angular/src/app/security/authentication/authentication.component.html
@@ -16,7 +16,7 @@
 
           <mat-form-field appearance="outline" class="full-width">
             <mat-label>Senha</mat-label>
-            <input matInput formControlName="senha" type="password" placeholder="Senha">
+            <input matInput formControlName="password" type="password" placeholder="Senha">
           </mat-form-field>
 
           <button mat-raised-button color="primary" type="submit" title="Entrar" class="full-width">
