--- a/angular/src/styles.scss
+++ b/angular/src/styles.scss
@@ -6,3 +6,6 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;}
 .button-incluir{
   margin: 20px
 }
+.button-exportar {
+  margin: 20px
+}
