--- a/angular/src/app/shared/abstract-listar/abstract-listar.component.html
+++ b/angular/src/app/shared/abstract-listar/abstract-listar.component.html
@@ -1,5 +1,5 @@
 <!-- Campo de filtro -->
-<div style="display: flex; justify-content: flex-end; align-items: center; margin-bottom: 10px;" *ngIf="false">
+<div style="display: flex; justify-content: flex-end; align-items: center; margin-bottom: 10px;" *ngIf="getnameComponent()=='items'">
   <mat-form-field style="flex-grow: 1; max-width: 400px;">
     <input matInput [(ngModel)]="filtro" placeholder="Pesquisar" />
     <button mat-icon-button *ngIf="filtro" matSuffix (click)="clearFilter()">
