UEG-35/Implementação Log
1- Implementação da tela de log

--- a/angular/src/app/sidnav/sidnav.component.html
+++ b/angular/src/app/sidnav/sidnav.component.html
@@ -13,6 +13,10 @@
       <mat-icon>wallpaper</mat-icon>
       <span>Postagens</span>
     </a>
+    <a mat-list-item routerLink='/log' routerLinkActive="active-link">
+      <mat-icon>history</mat-icon>
+      <span>Histórico</span>
+    </a>
     <a mat-list-item (click)="redirectToWhatsapp()" target="_blank">
       <mat-icon>call</mat-icon>
       <span>Contato</span>
