--- a/angular/src/app/shared/abstract-listar/abstract-listar.component.html
+++ b/angular/src/app/shared/abstract-listar/abstract-listar.component.html
@@ -13,20 +13,23 @@
 
 <mat-card>
   <mat-card-content>
-    <div style="align-items: end">
+    <div style="text-align: center">
 
       <!-- Tabela -->
       <table mat-table [dataSource]="dataSource">
-        <ng-container *ngFor="let column of displayedColumns" [matColumnDef]="column">
-          <th mat-header-cell *matHeaderCellDef>{{ columnNamesMapping[column] }}</th>
-          <td mat-cell *matCellDef="let element">{{ element[column] }}</td>
+        <ng-container *ngFor="let column of displayedColumns" [matColumnDef]="column" >
+          <th mat-header-cell *matHeaderCellDef style="text-align: center">{{ columnNamesMapping[column] }}</th>
+          <td mat-cell *matCellDef="let element" style="text-align: center">{{ element[column] }}</td>
         </ng-container>
 
         <ng-container matColumnDef="acao">
-          <th mat-header-cell *matHeaderCellDef> Ação </th>
-          <td mat-cell *matCellDef="let element">
-            <button mat-button (click)="editar(element)">Editar</button>
-            <button mat-button (click)="excluir(element)">Excluir</button>
+          <th mat-header-cell *matHeaderCellDef style="text-align: center"> Ação </th>
+          <td mat-cell *matCellDef="let element" style="display:flex; flex-direction: column; align-items: center;">
+            <div style="display:flex; flex-direction: row">
+              <button mat-button (click)="editar(element)">Editar</button>
+              <button mat-button (click)="excluir(element)">Excluir</button>
+            </div>
+            <button mat-button (click)="excluir(element)">Exportar</button>
           </td>
         </ng-container>
 
