--- a/angular/src/app/sidnav/sidnav.component.scss
+++ b/angular/src/app/sidnav/sidnav.component.scss
@@ -3,9 +3,10 @@
   height: 100%;
   display: flex;
   flex-direction: column;
+  overflow: hidden;
 }
 
-.sidenav-header {
+.sidenav-footer {
   position: fixed;
   bottom: 0;
   left: 10px;
