UEG-82 Mais adequações

--- a/angular/src/app/sidnav/sidnav.component.html
+++ b/angular/src/app/sidnav/sidnav.component.html
@@ -24,7 +24,7 @@
   </mat-nav-list>
   <div class="sidenav-footer">
     <div class="header-text" [class.hide-header-text]="sidenavCollapsed()">
-      <a href=""> Sobre </a>
+      <a routerLink='/about' routerLinkActive="active-link">Sobre </a>
     </div>
   </div>
 </div>
