--- a/angular/src/styles.scss
+++ b/angular/src/styles.scss
@@ -1,6 +1,6 @@
 @import "@angular/material/prebuilt-themes/cyan-orange.css";
 
-html, body { height: 100%; }
+html, body { height: 100%;overflow: hidden }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;}
 
 .button-incluir{
