--- a/angular/src/app/edit-items/edit-items.component.html
+++ b/angular/src/app/edit-items/edit-items.component.html
@@ -125,8 +125,8 @@
       </div>
 
     <div mat-dialog-actions align="end">
-      <button mat-button mat-dialog-close>Fechar</button>
-      <button mat-button color="primary" type="submit" (click)="onSubmit()">
+      <button mat-button mat-dialog-close style="background-color:  #1fd219; color: white;">Fechar</button>
+      <button mat-button style="background-color:  #1976D2; color: white;" type="submit" (click)="onSubmit()">
         {{ data ? 'Editar' : 'Cadastrar' }}
       </button>
     </div>
