--- a/angular/src/app/edit-user/edit-user.component.html
+++ b/angular/src/app/edit-user/edit-user.component.html
@@ -82,8 +82,8 @@
     </div>
 
     <div mat-dialog-actions align="end">
-      <button mat-button mat-dialog-close>Fechar</button>
-      <button mat-button color="primary" type="submit" (click)="onSubmit()">
+      <button mat-button mat-dialog-close style="background-color:  #1fd219; color: white;">Fechar</button>
+      <button style="background-color:  #1976D2; color: white;" mat-button color="primary" type="submit" (click)="onSubmit()">
         {{ data ? 'Editar' : 'Cadastrar' }}
       </button>
     </div>
