--- a/angular/src/app/shared/abstract-listar/abstract-listar.component.html
+++ b/angular/src/app/shared/abstract-listar/abstract-listar.component.html
@@ -1,11 +1,11 @@
 <!-- Campo de filtro -->
-<div style="display: flex; justify-content: flex-end; align-items: center; margin-bottom: 10px;" *ngIf="getnameComponent()=='items'">
+<div style="display: flex; justify-content: flex-end; align-items: center; margin-bottom: 10px;" *ngIf="getnameComponent() === 'items'">
   <mat-form-field style="flex-grow: 1; max-width: 400px;">
     <input matInput [(ngModel)]="filtro" placeholder="Pesquisar" />
     <button mat-icon-button *ngIf="filtro" matSuffix (click)="clearFilter()">
       <mat-icon>clear</mat-icon>
     </button>
-    <button mat-icon-button  matSuffix (click)="applyFilter()" style="border-radius: 20px; margin: 10px;">
+    <button mat-icon-button matSuffix (click)="applyFilter()" style="border-radius: 20px; margin: 10px;">
       <mat-icon>filter_list</mat-icon>
     </button>
   </mat-form-field>
@@ -17,24 +17,25 @@
 
       <!-- Tabela -->
       <table mat-table [dataSource]="dataSource">
-        <ng-container *ngFor="let column of displayedColumns" [matColumnDef]="column" >
+        <ng-container *ngFor="let column of displayedColumns" [matColumnDef]="column">
           <th mat-header-cell *matHeaderCellDef style="text-align: center">{{ columnNamesMapping[column] }}</th>
           <td mat-cell *matCellDef="let element" style="text-align: center">{{ element[column] }}</td>
         </ng-container>
 
-        <ng-container matColumnDef="acao">
+        <!-- Condicional para mostrar coluna de ações apenas se o componente não for 'log' -->
+        <ng-container matColumnDef="acao" *ngIf="getnameComponent() !== 'log'">
           <th mat-header-cell *matHeaderCellDef style="text-align: center"> Ação </th>
           <td mat-cell *matCellDef="let element" style="display:flex; flex-direction: column; align-items: center;">
             <div style="display:flex; flex-direction: row">
-              <button mat-button (click)="editar(element)">Editar</button>
-              <button mat-button (click)="excluir(element)">Excluir</button>
+              <button mat-flat-button (click)="editar(element)" style="background-color: #1976D2; color: white;" *ngIf="validaPermissoesUsuarioExterno()">Editar</button>
+              <button mat-button (click)="excluir(element)" style="background-color: #D32F2F; color:white;" [disabled]="validaPermissoes()" *ngIf="validaPermissoesUsuarioExterno()">Excluir</button>
             </div>
-            <button mat-button (click)="excluir(element)">Exportar</button>
+            <button mat-button (click)="exportar()" style="background-color: #388E3C; color:white;">Exportar</button>
           </td>
         </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns.concat(['acao'])"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns.concat(['acao']);"></tr>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns.concat(getnameComponent() !== 'log' ? ['acao'] : [])"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns.concat(getnameComponent() !== 'log' ? ['acao'] : []);"></tr>
       </table>
 
       <!-- Paginação -->
@@ -45,10 +46,9 @@
         (page)="onPageChange($event)">
       </mat-paginator>
 
-      <!-- Botões de ação -->
-      <div style="display: flex; justify-content: end; margin-top: 10px;">
-        <button mat-raised-button style="background:#167362;color: white" class="button-incluir" (click)="incluir()">INCLUIR+</button>
-        <button mat-raised-button style="background:#731616;color: white" class="button-exportar" (click)="exportar()" *ngIf="false">EXPORTAR PDF</button>
+      <!-- Botão de inclusão, exibido apenas se o componente não for 'log' -->
+      <div *ngIf="getnameComponent() !== 'log'" style="display: flex; justify-content: end; margin-top: 10px;">
+        <button mat-raised-button style="background-color: #167362; color: white;" class="button-incluir" (click)="incluir()" *ngIf="validaPermissoesUsuarioExterno()">INCLUIR+</button>
       </div>
     </div>
   </mat-card-content>
