--- a/angular/src/styles.scss
+++ b/angular/src/styles.scss
@@ -1,4 +1,3 @@
-@import "@angular/material/prebuilt-themes/cyan-orange.css";
 
 html, body { height: 100%;overflow: hidden }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;}
@@ -8,4 +7,8 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;}
 }
 .button-exportar {
   margin: 20px
+}
+
+button{
+  margin: 05px
 }
