--- a/angular/src/app/sidnav/sidnav.component.html
+++ b/angular/src/app/sidnav/sidnav.component.html
@@ -9,7 +9,7 @@
       <mat-icon>format_list_bulleted</mat-icon>
       <span>Itens</span>
     </a>
-    <a mat-list-item routerLink='/' routerLinkActive="active-link">
+    <a mat-list-item  routerLinkActive="active-link">
       <mat-icon>wallpaper</mat-icon>
       <span>Postagens</span>
     </a>
