UEG-82 Alteração ícones e página sobre, a pedido do professor

--- a/angular/src/app/shared/abstract-listar/abstract-listar.component.html
+++ b/angular/src/app/shared/abstract-listar/abstract-listar.component.html
@@ -25,12 +25,10 @@
         <!-- Condicional para mostrar coluna de ações apenas se o componente não for 'log' -->
         <ng-container matColumnDef="acao" *ngIf="getnameComponent() !== 'log'">
           <th mat-header-cell *matHeaderCellDef style="text-align: center"> Ação </th>
-          <td mat-cell *matCellDef="let element" style="display:flex; flex-direction: column; align-items: center;">
-            <div style="display:flex; flex-direction: row">
-              <button mat-flat-button (click)="editar(element)" style="background-color: #1976D2; color: white;" *ngIf="validaPermissoesUsuarioExterno()">Editar</button>
-              <button mat-button (click)="excluir(element)" style="background-color: #D32F2F; color:white;" [disabled]="validaPermissoes()" *ngIf="validaPermissoesUsuarioExterno()">Excluir</button>
-            </div>
-            <button mat-button (click)="exportar()" style="background-color: #388E3C; color:white;" *ngIf="getnameComponent() !== 'user'">Exportar</button>
+          <td mat-cell *matCellDef="let element" style="display:flex; flex-direction: row; justify-content: center">
+            <button mat-raised-button (click)="editar(element)" style="background-color: #1976D2; color: white; justify-content: end; border-radius: 20px" *ngIf="validaPermissoesUsuarioExterno()"><mat-icon>edit</mat-icon></button>
+            <button mat-raised-button (click)="excluir(element)" style="background-color: #D32F2F; color:white; justify-content: flex-end; border-radius: 20px" [disabled]="validaPermissoes()" *ngIf="validaPermissoesUsuarioExterno()"><mat-icon>delete</mat-icon></button>
+            <button mat-raised-button (click)="exportar()" style="background-color: #388E3C; color:white; justify-content: end; border-radius: 20px" *ngIf="getnameComponent() !== 'user'"><mat-icon>picture_as_pdf</mat-icon></button>
           </td>
         </ng-container>
 
@@ -48,7 +46,9 @@
 
       <!-- Botão de inclusão, exibido apenas se o componente não for 'log' -->
       <div *ngIf="getnameComponent() !== 'log'" style="display: flex; justify-content: end; margin-top: 10px;">
-        <button mat-raised-button style="background-color: #167362; color: white;" class="button-incluir" (click)="incluir()" *ngIf="validaPermissoesUsuarioExterno()">INCLUIR+</button>
+        <button mat-raised-button style="background-color: #167362; color: white; justify-content: flex-end; border-radius: 20px" class="button-incluir" (click)="incluir()" *ngIf="validaPermissoesUsuarioExterno()">
+          <mat-icon>add</mat-icon>
+        </button>
       </div>
     </div>
   </mat-card-content>
