--- a/angular/src/app/sidnav/sidnav.component.html
+++ b/angular/src/app/sidnav/sidnav.component.html
@@ -1,26 +1,30 @@
 <div class="sidenav-container"> <!-- Contêiner para o fundo -->
   <mat-nav-list>
-    <a mat-list-item routerLink='/user' routerLinkActive="active-link" *ngIf="validaPermissoes()">
+    <a mat-list-item [routerLink]="UserPaths.LIST" routerLinkActive="active-link" *ngIf="showUser">
       <mat-icon>person</mat-icon>
       <span>Usuários</span>
     </a>
 
-    <a mat-list-item routerLink='/items' routerLinkActive="active-link">
+    <a mat-list-item [routerLink]="UserPaths.LIST_LOG" routerLinkActive="active-link" *ngIf="showUserLog">
+      <mat-icon>history</mat-icon>
+      <span>Histórico</span>
+    </a>
+
+    <a mat-list-item [routerLink]="ItemPaths.LIST" routerLinkActive="active-link">
       <mat-icon>format_list_bulleted</mat-icon>
       <span>Itens</span>
     </a>
+
     <a mat-list-item  routerLinkActive="active-link">
       <mat-icon>wallpaper</mat-icon>
       <span>Postagens</span>
     </a>
-    <a mat-list-item routerLink='/log' routerLinkActive="active-link" *ngIf="validaPermissoes()">
-      <mat-icon>history</mat-icon>
-      <span>Histórico</span>
-    </a>
+
     <a mat-list-item (click)="redirectToWhatsapp()" target="_blank">
       <mat-icon>call</mat-icon>
       <span>Contato</span>
     </a>
+
   </mat-nav-list>
   <div class="sidenav-footer">
     <div class="header-text" [class.hide-header-text]="sidenavCollapsed()">
