--- a/angular/src/app/sidnav/sidnav.component.html
+++ b/angular/src/app/sidnav/sidnav.component.html
@@ -15,7 +15,7 @@
       <span>Itens</span>
     </a>
 
-    <a mat-list-item  routerLinkActive="active-link">
+    <a mat-list-item [routerLink]="postPaths.LIST" routerLinkActive="active-link">
       <mat-icon>wallpaper</mat-icon>
       <span>Postagens</span>
     </a>
