--- a/angular/src/app/feature-post/edit-post/edit-post.component.html
+++ b/angular/src/app/feature-post/edit-post/edit-post.component.html
@@ -1,1 +1,66 @@
-<p>edit-post works!</p>
+<h1 mat-dialog-title>Editar Postagem</h1>
+<div mat-dialog-content>
+  <form [formGroup]="editPostForm">
+    <!-- Carrossel de Imagens -->
+    <div *ngIf="data?.images?.length > 0" class="carousel-container">
+      <div class="carousel">
+        <div *ngFor="let image of data.images; let i = index" class="carousel-slide" [ngClass]="{'active': i === currentIndex}">
+          <img  src="{{'data:image/jpg;base64,' + image.image}}" alt="Image" class="carousel-image" />
+        </div>
+      </div>
+
+      <!-- Controls -->
+      <button (click)="prevSlide()" class="carousel-control prev">❮</button>
+      <button (click)="nextSlide()" class="carousel-control next">❯</button>
+    </div>
+
+    <!-- Título -->
+    <mat-form-field appearance="fill" class="full-width">
+      <mat-label>Título</mat-label>
+      <input matInput formControlName="title" placeholder="Digite o título da postagem">
+    </mat-form-field>
+
+    <!-- Subtítulo -->
+    <mat-form-field appearance="fill" class="full-width">
+      <mat-label>Subtítulo</mat-label>
+      <input matInput formControlName="subtitle" placeholder="Digite o subtítulo">
+    </mat-form-field>
+
+    <!-- Conteúdo -->
+    <mat-form-field appearance="fill" class="full-width">
+      <mat-label>Conteúdo</mat-label>
+      <textarea matInput formControlName="content" rows="4" placeholder="Digite o conteúdo"></textarea>
+    </mat-form-field>
+
+    <!-- Tag -->
+    <mat-form-field appearance="fill" class="full-width">
+      <mat-label>Tag</mat-label>
+      <input matInput formControlName="tag" placeholder="Digite uma tag">
+    </mat-form-field>
+
+    <!-- Escolher arquivo -->
+    <div class="upload-container">
+      <button mat-raised-button color="primary" (click)="fileInput.click()">
+        Escolher Novo Arquivo
+      </button>
+      <input
+        #fileInput
+        type="file"
+        (change)="onFileSelected($event)"
+        accept="image/*"
+        hidden
+      />
+    </div>
+  </form>
+</div>
+
+<div mat-dialog-actions align="end">
+  <button mat-button mat-dialog-close>Cancelar</button>
+  <button
+    mat-raised-button
+    color="primary"
+    [disabled]="!editPostForm.valid"
+    (click)="onSubmit()">
+    Salvar
+  </button>
+</div>
