--- a/angular/src/app/shared/abstract-listar/abstract-listar.component.html
+++ b/angular/src/app/shared/abstract-listar/abstract-listar.component.html
@@ -16,9 +16,9 @@
     <div style="text-align: center">
 
       <!-- Tabela -->
-      <table mat-table [dataSource]="dataSource">
+      <table mat-table [dataSource]="dataSource" matSort (matSortChange)="listarDados()">
         <ng-container *ngFor="let column of displayedColumns" [matColumnDef]="column">
-          <th mat-header-cell *matHeaderCellDef style="text-align: center">{{ columnNamesMapping[column] }}</th>
+          <th mat-header-cell *matHeaderCellDef style="text-align: center" mat-sort-header>{{ columnNamesMapping[column] }}</th>
           <td mat-cell *matCellDef="let element" style="text-align: center">{{ element[column] }}</td>
         </ng-container>
 
@@ -36,11 +36,12 @@
       </table>
 
       <!-- Paginação -->
-      <mat-paginator
-        [pageSize]="pageSize"
-        [pageSizeOptions]="[5, 10, 25, 100]"
-        showFirstLastButtons
-        (page)="onPageChange($event)">
+      <mat-paginator [pageSize]="pageSize"
+                     [length]="dataSource.paginator?.length"
+                     [pageIndex]="dataSource.paginator?.pageIndex"
+                     [pageSizeOptions]="[5, 10, 25, 100]"
+                     showFirstLastButtons
+                     (page)="onPageChange($event)">
       </mat-paginator>
 
       <div *ngIf="getShowActions()" style="display: flex; justify-content: end; margin-top: 10px;">
