--- a/angular/src/app/app.component.scss
+++ b/angular/src/app/app.component.scss
@@ -16,7 +16,7 @@ mat-toolbar {
 
 mat-sidenav-container {
   height: calc(100vh - 60px);
-  background-color: #8abf92;
+  background-color: #ffffff;
 }
 
 .img-logo {
