--- a/angular/src/app/feature-post/list-post/list-post.component.scss
+++ b/angular/src/app/feature-post/list-post/list-post.component.scss
@@ -31,9 +31,9 @@
 
 /* Cartão de Post */
 .post-card {
-  background-color: #f5f5f5;
+  background-color: #ffffff;
   border-radius: 10px;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
   overflow: hidden;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
