--- a/angular/src/app/feature-post/edit-post/edit-post.component.html
+++ b/angular/src/app/feature-post/edit-post/edit-post.component.html
@@ -9,31 +9,55 @@
     </div>
 
     <!-- Título -->
-    <mat-form-field appearance="fill" class="full-width">
-      <mat-label>Título</mat-label>
-      <input matInput formControlName="title" placeholder="Digite o título da postagem">
-    </mat-form-field>
+    <div *ngIf="permissionConfig.HAS_PERMISSION_UPDATE; else titleView">
+      <mat-form-field appearance="fill" class="full-width">
+        <mat-label>Título</mat-label>
+        <input matInput formControlName="title" placeholder="Digite o título da postagem">
+      </mat-form-field>
+    </div>
+    <ng-template #titleView>
+      <h1>{{ editPostForm.get('title')?.value || 'Sem título' }}</h1>
+    </ng-template>
 
     <!-- Subtítulo -->
-    <mat-form-field appearance="fill" class="full-width">
-      <mat-label>Subtítulo</mat-label>
-      <input matInput formControlName="subtitle" placeholder="Digite o subtítulo">
-    </mat-form-field>
+    <div *ngIf="permissionConfig.HAS_PERMISSION_UPDATE; else subtitleView">
+      <mat-form-field appearance="fill" class="full-width">
+        <mat-label>Subtítulo</mat-label>
+        <input matInput formControlName="subtitle" placeholder="Digite o subtítulo">
+      </mat-form-field>
+    </div>
+    <ng-template #subtitleView>
+      <h2>{{ editPostForm.get('subtitle')?.value || 'Sem subtítulo' }}</h2>
+    </ng-template>
 
     <!-- Conteúdo -->
-    <mat-form-field appearance="fill" class="full-width">
-      <mat-label>Conteúdo</mat-label>
-      <textarea matInput formControlName="content" rows="4" placeholder="Digite o conteúdo"></textarea>
-    </mat-form-field>
+    <div *ngIf="permissionConfig.HAS_PERMISSION_UPDATE; else contentView">
+      <mat-form-field appearance="fill" class="full-width">
+        <mat-label>Conteúdo</mat-label>
+        <textarea matInput formControlName="content" rows="4" placeholder="Digite o conteúdo"></textarea>
+      </mat-form-field>
+    </div>
+    <ng-template #contentView>
+      <p>{{ editPostForm.get('content')?.value || 'Sem conteúdo' }}</p>
+    </ng-template>
 
     <!-- Tag -->
-    <mat-form-field appearance="fill" class="full-width">
-      <mat-label>Tag</mat-label>
-      <input matInput formControlName="tag" placeholder="Digite uma tag">
-    </mat-form-field>
+    <div *ngIf="permissionConfig.HAS_PERMISSION_UPDATE">
+      <mat-form-field appearance="fill" class="full-width">
+        <mat-label>Tag</mat-label>
+        <input matInput formControlName="tag" placeholder="Digite uma tag">
+      </mat-form-field>
+    </div>
+
+    <!-- Ativo -->
+    <div class="form-row" *ngIf="permissionConfig.HAS_PERMISSION_UPDATE">
+      <mat-slide-toggle formControlName="approval">
+        Ativo
+      </mat-slide-toggle>
+    </div>
 
     <!-- Escolher arquivo -->
-    <div class="upload-container"  *ngIf="permissionConfig.HAS_PERMISSION_UPDATE">
+    <div class="upload-container" *ngIf="permissionConfig.HAS_PERMISSION_UPDATE">
       <button mat-raised-button color="primary" (click)="fileInput.click()">
         Escolher Novo Arquivo
       </button>
@@ -48,7 +72,7 @@
   </form>
 </div>
 
-<div mat-dialog-actions align="end"  *ngIf="permissionConfig.HAS_PERMISSION_UPDATE">
+<div mat-dialog-actions align="end" *ngIf="permissionConfig.HAS_PERMISSION_UPDATE">
   <button mat-button mat-dialog-close>Cancelar</button>
   <button
     mat-raised-button
