--- a/angular/src/app/feature-post/edit-post/edit-post.component.scss
+++ b/angular/src/app/feature-post/edit-post/edit-post.component.scss
@@ -1,4 +1,4 @@
-/* Estilização geral */
+/* shared-styles.scss */
 mat-dialog-content {
   padding: 24px 16px;
   background: #f9f9f9; /* Fundo mais claro */
@@ -58,12 +58,11 @@ mat-dialog-actions button {
 
 .image {
   width: 80%; /* Defina um tamanho fixo para a largura */
-  height:80%; /* Defina um tamanho fixo para a altura */
+  height: 80%; /* Defina um tamanho fixo para a altura */
   object-fit: cover; /* Garante que a imagem cubra o espaço sem distorcer */
   border-radius: 15px; /* Bordas arredondadas */
   border: 4px solid #333; /* Borda escura */
   box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.6); /* Sombra escura */
-
 }
 
 /* Botões de formulário */
